# Basic-Search-Engine

./: CMakeLists.txt  Leia-me.md  README.md  leia-me.txt
files/: arquivo0.txt  arquivo1.txt  arquivo2.txt  arquivo3.txt  arquivo5.txt  arquivo6.txt  arquivo7.txt  arquivo8.txt  arquivo9.txt  entrada.txt
src/: arquivo.c  arquivo.h  lista.c  lista.h  main.c  processo.c  processo.h
src/file/: arquivo.c  file.c  file.h
src/hashtable/: Hashtable.c  hashtable.c  hashtable.h
src/linkedlist/: linkedlist.c  linkedlist.h  lista.h  node.c  node.h
src/pairlinkedlist/: pairlinkedlist.c  pairlinkedlist.h  pairnode.c  pairnode.h
src/patricia/: patricia.c  patricia.h  treenode.c  treenode.h
src/tfidf/: tfidf.c  tfidf.h
